--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+streamlit>=1.29.0
+psycopg2-binary>=2.9.10
 groq>=0.13.0
-beautifulsoup4==4.12.2
-requests==2.31.0
-python-dotenv==1.0.0
-lxml==4.9.3
-psycopg2-binary==2.9.9
-streamlit==1.29.0
+beautifulsoup4>=4.12.2
+requests>=2.31.0
+python-dotenv>=1.0.0
+lxml>=5.0.0
